--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ Text Domain: health
 
 /* Main css with editable-------------------------------------------------------------- */
 .row {
-    margin-left: 0px !important;
-    margin-right: 0px !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 } 
 /* Header Section css-------------------------------------------------------------- */ 
 body {
@@ -29,8 +29,8 @@ body {
     transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
 }
 .container {
-    padding-left: 0px !important;
-    padding-right: 0px !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
 }
 
 /* Maksim Slavin - Start: Override theme default classes */
@@ -43,7 +43,7 @@ body {
         min-height: 180px;
     }
     .gmap2 {
-        margin-left: 0px;
+        margin-left: 0;
     }
 }
 
@@ -64,7 +64,7 @@ body {
 
 .appointments_button {
     margin-top: 40px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 
 .gmap {
@@ -88,20 +88,20 @@ body {
 }
 
 .hc_footer_widget_area .container {
-    margin-left: 0px;
+    margin-left: 0;
     width: 100%;
 }
 
 .header_section .container {
     width: 100%;
     height: 156px;
-    margin-left: 0px;
-    margin-right: 0px;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .header_section .col-md-6 {
     width: 345px;
-    padding-right: 0px;
+    padding-right: 0;
     padding-left: 30px;
 }
 
@@ -124,6 +124,10 @@ body {
 
 .navigation_section .navbar-nav > li > a {
     border-right: 1px solid #00a7d4;
+}
+
+.testimonials .hc_blog_section {
+    padding: 0 0 35px;
 }
 /* Maksim Slavin - End: Override theme default classes */
 
